--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/public/g-icon.png" />
+    <link rel="icon" type="image/png" href="/public/j icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ganishwar Portfolio</title>
+    <title>Jagan Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
